# MockString

./: CMakeLists.txt  library.h
BitTwiddling/: BitHacks.h
CMakeHelpers/: FileDownload.cmake
Exceptions/: ExceptionHandling.cpp  ExceptionHandling.h
GeneralMacros/: ALIGN.h  NPOS.h
MemoryManagement/: MemoryManager.cpp  MemoryManager.h
Strings/: FastString.cpp  FastString.h  StringManipulation.cpp  StringManipulation.h
UnitTests/Catch2/: catchmain.cpp
UnitTests/Matchers/: cstring.h
UnitTests/Mocks/: MockStringManipulation.cpp  MockStringManipulation.h
UnitTests/StringManipulation/: StripComments.cpp  Substring.cpp
